# site

./: Cargo.toml  site.db  testing.db
db/migrations/: 1699017484.sql
migrations/: 1699017484.sql
src/: cli.rs  config.rs  database.rs  main.rs  page.rs  template.rs
static/css/: style.css
templates/: index.html  macros.html
